<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Video</string>
    <string name="choose_language">Chọn ngôn ngữ</string>
    <string name="choose_region">Chọn vùng lãnh thổ</string>
    <string name="ok">Đồng ý</string>
    <string name="title_activity_menu">MenuActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="request_fail_login">Số điện thoại hoặc mật khẩu không đúng. Vui lòng thử lại!</string>
    <string name="request_fail_regis">Lấy mã xác thực thất bại. Vui lòng thử lại sau.</string>
    <string name="pull_to_refresh_first_loading"><![CDATA[Tải lại dữ liệu...]]></string>
    <string name="pull_to_refresh_fail">Không tải được dữ liệu.\nChạm vào đây để thử lại.</string>
    <string name="pull_to_load_more_emplty">Playlist rỗng</string>
    <string name="pull_to_load_more_no_result">Hiện chưa có dữ liệu. Cảm ơn!</string>
    <string name="error_network">Lỗi kết nối, vui lòng thử lại.</string>
    <string name="connection_error2">Không kết nối được.\nVui lòng bấm vào đây để thử lại</string>
    <string name="retry">Thử lại </string>
    <string name="sign_in">Đăng nhập</string>

    <!--exoplayer-->
    <string name="video">Video</string>

    <string name="audio">Audio</string>

    <string name="text">Text</string>

    <string name="selection_disabled">Disabled</string>

    <string name="selection_default">Default</string>

    <string name="selection_default_none">Default (none)</string>

    <string name="unexpected_intent_action">Unexpected intent action: <xliff:g id="action">%1$s</xliff:g></string>

    <string name="enable_random_adaptation">Enable random adaptation</string>

    <string name="error_drm_not_supported">Protected content not supported on API levels below 18</string>

    <string name="error_drm_unsupported_scheme">This device does not support the required DRM scheme</string>

    <string name="error_drm_unknown">An unknown DRM error occurred</string>

    <string name="error_no_decoder">This device does not provide a decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_no_secure_decoder">This device does not provide a secure decoder for <xliff:g id="mime_type">%1$s</xliff:g></string>

    <string name="error_querying_decoders">Unable to query device decoders</string>

    <string name="error_instantiating_decoder">Unable to instantiate decoder <xliff:g id="decoder_name">%1$s</xliff:g></string>

    <string name="error_unsupported_video">Media includes video tracks, but none are playable by this device</string>

    <string name="error_unsupported_audio">Media includes audio tracks, but none are playable by this device</string>

    <string name="storage_permission_denied">Permission to access storage was denied</string>

    <string name="sample_list_load_error">One or more sample lists failed to load</string>

    <string name="exit_ask">Ấn Back một lần nữa sẽ tắt ứng dụng.</string>

    <string name="repeat_one">Lặp lại bài hát</string>
    <string name="repeat_all">Lặp lại tất cả bài hát</string>
    <string name="repeat_shuffle">Lặp ngẫu nhiên</string>
</resources>
