<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/white"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/margin_normal"
        android:text="@string/choose_language"
        android:textColor="@color/text_header"
        android:textSize="@dimen/text_header"/>

    <Spinner
        android:id="@+id/spinner_languages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:padding="@dimen/margin_normal"
        android:text="@string/choose_region"
        android:textColor="@color/text_header"
        android:textSize="@dimen/text_header"/>

    <Spinner
        android:id="@+id/spinner_regions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"/>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/button_submit"
        style="@style/button_normal"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_normal"
        android:minWidth="100dp"
        android:text="@string/ok"/>
</LinearLayout>