<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_main"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/transparent"
              android:gravity="center"
              android:orientation="vertical"
              android:padding="10.0dip">

    <FrameLayout
        android:id="@+id/progress_bar_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ProgressBar
            android:id="@+id/progress_wheel"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/empty_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/loading_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:text="@string/pull_to_load_more_no_result"
            android:textColor="@color/black"
            android:textSize="14.0sp"
            android:visibility="gone"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/loading_error_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/loadingerror"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_normal"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="@string/error_network"
            android:textColor="@color/item_content"
            android:textSize="16.0sp"/>

        <TextView
            android:id="@+id/loadingerror_subtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5.0dip"
            android:background="@android:color/transparent"
            android:gravity="center"
            android:text="Xin vui lòng thử lại"
            android:textColor="#ff999999"
            android:textSize="14.0sp"
            android:visibility="gone"/>
    </LinearLayout>

    <TextView
        android:id="@+id/btn_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:background="@color/colorPrimary"
        android:paddingBottom="10.0dip"
        android:paddingLeft="25.0dip"
        android:paddingRight="25.0dip"
        android:paddingTop="10.0dip"
        android:text="@string/retry"
        android:textColor="@color/white"
        android:textSize="15.0sp"
        android:textStyle="bold"/>

</LinearLayout>